Name:                GLUtil
Version:             0.10.2
Synopsis:            Miscellaneous OpenGL utilities.
License:             BSD3
License-file:        LICENSE
Author:              Anthony Cowley
Maintainer:          acowley@gmail.com
Copyright:           (c) 2012,2013 Anthony Cowley
Category:            Graphics
Build-type:          Simple
Description:         Helpers for working with shaders, buffer objects, and
                     textures in OpenGL.
Cabal-version:       2.0

Extra-Source-Files: examples/example1.hs,
                    examples/TGA.hs,
                    examples/images/hello1.tga,
                    examples/images/hello2.tga,
                    examples/shaders/hello-gl.frag,
                    examples/shaders/hello-gl.vert,
                    CHANGELOG.md
tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.1

source-repository head
  type:     git
  location: http://github.com/acowley/GLUtil.git

Library
  Exposed-modules:     Graphics.GLUtil,
                       Graphics.GLUtil.GLError,
                       Graphics.GLUtil.Shaders,
                       Graphics.GLUtil.ShaderProgram,
                       Graphics.GLUtil.BufferObjects,
                       Graphics.GLUtil.Camera2D,
                       Graphics.GLUtil.Camera3D,
                       Graphics.GLUtil.Drawing,
                       Graphics.GLUtil.Textures,
                       Graphics.GLUtil.JuicyTextures,
                       Graphics.GLUtil.VertexArrayObjects,
                       Graphics.GLUtil.Linear,
                       Graphics.GLUtil.TypeMapping,
                       Graphics.GLUtil.Viewport

  Build-depends:       base >= 4.2 && < 5,
                       bytestring,
                       array,
                       containers >= 0.5,
                       directory,
                       filepath,
                       linear >= 1.1.3,
                       JuicyPixels >= 3,
                       OpenGLRaw >= 3.0 && < 3.4,
                       OpenGL >= 3 && < 3.1,
                       transformers >= 0.3,
                       vector >= 0.7
  if (impl(ghc >= 7.10.1) && (!os(windows)))
    Build-depends:      hpp >= 0.3.1 && < 0.7
    Build-tool-depends: hpp:hpp
    GHC-Options:        -pgmPhpp -optP--cpp -optP-P
  else
    Build-tool-depends: cpphs:cpphs
    GHC-Options:        -pgmPcpphs -optP--cpp -optP--hashes

  GHC-Options:         -Odph -Wall
  HS-Source-Dirs:      src
  default-language:    Haskell2010
