name:                GLUtil-example1
version:             0.1.0.0
synopsis:            Modern OpenGL Tutorial Example 1
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           (C) 2014 Anthony Cowley
category:            Graphics
build-type:          Simple
extra-source-files:  shaders/hello-gl.*
cabal-version:       >=1.10

executable GLUtil-example1
  main-is:             example1.hs
  other-modules:       TGA
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10 && < 0.11,
                       binary >= 0.7 && < 0.8,
                       filepath,
                       OpenGL,
                       GLUtil >= 0.8.2 && < 0.9,
                       GLFW-b >= 1.4 && < 1.5
  hs-source-dirs:      .
  default-language:    Haskell2010